# autotools-cross-compile

./: .gitignore  LICENSE  README.md  bootstrap.sh  configure.ac  cross-compile-win64.sh
src/: Makefile.am  main.c
